Setup angular skeleton

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <div ng-include="'partials/navbar.html'"></div>
 
 
+<div ng-view></div>
 
 
 
@@ -37,5 +38,6 @@
 <!-- Factories -->
 <script type="text/javascript" src="app/factories/AuthFactory.js"></script>
 <!-- Controllers -->
+<script type="text/javascript" src="app/controllers/UserCtrl.js"></script>
 </body>
 </html>
