Setup login modal

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
 	<title>Quick Grade</title>
 
-	<link rel="stylesheet" type="text/css" href="css/navbar-footer.css">
 	<link rel="stylesheet" type="text/css" href="lib/node_modules/bootstrap/dist/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" type="text/css" href="lib/node_modules/angular-ui-bootstrap/dist/ui-bootstrap-csp.css">
 	<link rel="stylesheet" type="text/css" href="lib/node_modules/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/navbar-footer.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 <!--Navbar -->
@@ -30,6 +32,7 @@
 <script type="text/javascript" src="lib/node_modules/angular/angular.min.js"></script>
 <script type="text/javascript" src="lib/node_modules/angular-route/angular-route.min.js"></script>
 <script type="text/javascript" src="lib/node_modules/angularfire/dist/angularfire.min.js"></script>
+<script type="text/javascript" src="lib/node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
 
 <!-- App -->
 <script type="text/javascript" src="app/app.js"></script>
