--- a/index.html
+++ b/index.html
@@ -42,5 +42,6 @@
 <script type="text/javascript" src="app/factories/AuthFactory.js"></script>
 <!-- Controllers -->
 <script type="text/javascript" src="app/controllers/UserCtrl.js"></script>
+<script type="text/javascript" src="app/controllers/ProfileCtrl.js"></script>
 </body>
 </html>
