User can create and delete courses

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
 <script type="text/javascript" src="app/values/fb-creds.js"></script>
 <!-- Factories -->
 <script type="text/javascript" src="app/factories/AuthFactory.js"></script>
+<script type="text/javascript" src="app/factories/GradeFactory.js"></script>
 <!-- Controllers -->
 <script type="text/javascript" src="app/controllers/UserCtrl.js"></script>
 <script type="text/javascript" src="app/controllers/ProfileCtrl.js"></script>
+<script type="text/javascript" src="app/controllers/SingleCourseCtrl.js"></script>
 </body>
 </html>
