--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/navbar-footer.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
-<body>
+<body id="body">
 <!--Navbar -->
 <div ng-include="'partials/navbar.html'"></div>
 
