Added settings page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 <!-- Sticky Footer -->
-<div ng-include="'partials/footer.html'"></div>
+<!-- <div ng-include="'partials/footer.html'"></div> -->
 
 
 
@@ -45,5 +45,6 @@
 <script type="text/javascript" src="app/controllers/UserCtrl.js"></script>
 <script type="text/javascript" src="app/controllers/ProfileCtrl.js"></script>
 <script type="text/javascript" src="app/controllers/SingleCourseCtrl.js"></script>
+<script type="text/javascript" src="app/controllers/SettingsCtrl.js"></script>
 </body>
 </html>
