Moved WhatDoINeed to its own partial/controller module

--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
 <script type="text/javascript" src="app/controllers/ProfileCtrl.js"></script>
 <script type="text/javascript" src="app/controllers/SingleCourseCtrl.js"></script>
 <script type="text/javascript" src="app/controllers/SettingsCtrl.js"></script>
+<script type="text/javascript" src="app/controllers/WhatDoINeedCtrl.js"></script>
 </body>
 </html>
