--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <script type="text/javascript" src="lib/node_modules/angular-route/angular-route.min.js"></script>
 <script type="text/javascript" src="lib/node_modules/angularfire/dist/angularfire.min.js"></script>
 <script type="text/javascript" src="lib/node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
+<script type="text/javascript" src="lib/node_modules/progressbar.js/dist/progressbar.min.js"></script>
 
 <!-- App -->
 <script type="text/javascript" src="app/app.js"></script>
@@ -41,6 +42,7 @@
 <!-- Factories -->
 <script type="text/javascript" src="app/factories/AuthFactory.js"></script>
 <script type="text/javascript" src="app/factories/GradeFactory.js"></script>
+<script type="text/javascript" src="app/factories/ChartFactory.js"></script>
 <!-- Controllers -->
 <script type="text/javascript" src="app/controllers/UserCtrl.js"></script>
 <script type="text/javascript" src="app/controllers/ProfileCtrl.js"></script>
