Finished course settings page

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 <script type="text/javascript" src="app/factories/AuthFactory.js"></script>
 <script type="text/javascript" src="app/factories/GradeFactory.js"></script>
 <script type="text/javascript" src="app/factories/ChartFactory.js"></script>
+<script type="text/javascript" src="app/factories/CourseSettings.js"></script>
 <!-- Controllers -->
 <script type="text/javascript" src="app/controllers/UserCtrl.js"></script>
 <script type="text/javascript" src="app/controllers/ProfileCtrl.js"></script>
