--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="MyApp">
 <head>
-	<title>Quick Grade</title>
+	<title>MyGrades</title>
 
 	<link rel="stylesheet" type="text/css" href="lib/node_modules/bootstrap/dist/css/bootstrap-theme.min.css">
 	<link rel="stylesheet" type="text/css" href="lib/node_modules/angular-ui-bootstrap/dist/ui-bootstrap-csp.css">
