--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <script type="text/javascript" src="lib/node_modules/angularfire/dist/angularfire.min.js"></script>
 <script type="text/javascript" src="lib/node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
 <script type="text/javascript" src="lib/node_modules/progressbar.js/dist/progressbar.min.js"></script>
+<!-- <script type="text/javascript" src="lib/node_modules/progressbar.js/d"></script> -->
 <script type="text/javascript" src="lib/node_modules/bootstrap-confirmation/bootstrap-confirmation.js"></script>
 
 <!-- App -->
