--- a/index.html
+++ b/index.html
@@ -14,12 +14,9 @@
 <div ng-include="'partials/navbar.html'"></div>
 
 
+<!-- Main View -->
 <div ng-view></div>
 
-
-
-<!-- Sticky Footer -->
-<!-- <div ng-include="'partials/footer.html'"></div> -->
 
 
 
