--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
 <!-- Dependencies -->
 <script type="text/javascript" src="lib/node_modules/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="lib/node_modules/angular/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+<!-- <script type="text/javascript" src="lib/node_modules/angular/angular.min.js"></script> -->
 <script type="text/javascript" src="lib/node_modules/angular-route/angular-route.min.js"></script>
 <script type="text/javascript" src="lib/node_modules/angularfire/dist/angularfire.min.js"></script>
 <script type="text/javascript" src="lib/node_modules/firebase/firebase.js"></script>
