--- a/index.html
+++ b/index.html
@@ -23,17 +23,16 @@
 
 
 <!-- Dependencies -->
-<script type="text/javascript" src="lib/node_modules/jquery/dist/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
-<!-- <script type="text/javascript" src="lib/node_modules/angular/angular.min.js"></script> -->
-<script type="text/javascript" src="lib/node_modules/angular-route/angular-route.min.js"></script>
-<script type="text/javascript" src="lib/node_modules/angularfire/dist/angularfire.min.js"></script>
-<script type="text/javascript" src="lib/node_modules/firebase/firebase.js"></script>
-<script type="text/javascript" src="lib/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="lib/node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
-<script type="text/javascript" src="lib/node_modules/progressbar.js/dist/progressbar.min.js"></script>
-<!-- <script type="text/javascript" src="lib/node_modules/progressbar.js/d"></script> -->
-<script type="text/javascript" src="lib/node_modules/bootstrap-confirmation/bootstrap-confirmation.js"></script>
+<script type="text/javascript" src="lib/dependencies/jquery.min.js"></script>
+<script type="text/javascript" src="lib/dependencies/angular.min.js"></script>
+<script type="text/javascript" src="lib/dependencies/angular-route.min.js"></script>
+<script type="text/javascript" src="lib/dependencies/angularfire.min.js"></script>
+<script type="text/javascript" src="lib/dependencies/firebase.js"></script>
+<script type="text/javascript" src="lib/dependencies/bootstrap.min.js"></script>
+<script type="text/javascript" src="lib/dependencies/ui-bootstrap.js"></script>
+<script type="text/javascript" src="lib/dependencies/progressbar.min.js"></script>
+<script type="text/javascript" src="lib/dependencies/bootstrap-confirmation.js"></script>
+
 
 <!-- App -->
 <script type="text/javascript" src="app/app.js"></script>
