--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
 	<title>MyGrades</title>
 
-	<link rel="stylesheet" type="text/css" href="lib/node_modules/bootstrap/dist/css/bootstrap-theme.min.css">
-	<link rel="stylesheet" type="text/css" href="lib/node_modules/angular-ui-bootstrap/dist/ui-bootstrap-csp.css">
-	<link rel="stylesheet" type="text/css" href="lib/node_modules/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="lib/dependencies/bootstrap-theme.min.css">
+
+	<link rel="stylesheet" type="text/css" href="lib/dependencies/ui-bootstrap-csp.css">
+	<!-- <link rel="stylesheet" type="text/css" href="lib/node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
+	<link rel="stylesheet" type="text/css" href="lib/dependencies/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/navbar-footer.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
