changed reference in index

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <!-- App -->
 <script type="text/javascript" src="app/app.js"></script>
 <!-- Values -->
-<script type="text/javascript" src="app/values/fb-creds.js"></script>
+<script type="text/javascript" src="lib/dependencies/fb-creds.js"></script>
 <!-- Factories -->
 <script type="text/javascript" src="app/factories/AuthFactory.js"></script>
 <script type="text/javascript" src="app/factories/GradeFactory.js"></script>
